<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.oneself</groupId>
    <artifactId>oneself-starter</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>oneself-starter</name>
    <description>oneself-starter</description>

    <properties>
        <java.version>21</java.version>
        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
    </properties>
    <modules>
        <module>oneself-redis-spring-boot-starter</module>
        <module>oneself-kafka-spring-boot-starter</module>
        <module>oneself-logging-spring-boot-starter</module>
        <module>oneself-elasticsearch-spring-boot-starter</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
